--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/home.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <!-- saved from url=(0103)file:///E:/webchatbackup/WeChat%20Files/sanyanbreadman/Files/frontend/frontend/template/blog/index.html -->
 <html lang="en"><!--<![endif]--><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	
@@ -500,15 +500,9 @@
     <!-- begin #footer-copyright -->
     <div id="footer-copyright" class="footer-copyright">
         <!-- begin container -->
-        <div class="container">
+        <div class="container" style="text-align:center">
             <span class="copyright">© 2017 SeanTheme All Right Reserved</span>
-            <ul class="social-media-list">
-                <li><a href="file:///E:/webchatbackup/WeChat%20Files/sanyanbreadman/Files/frontend/frontend/template/blog/index.html#"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="file:///E:/webchatbackup/WeChat%20Files/sanyanbreadman/Files/frontend/frontend/template/blog/index.html#"><i class="fa fa-google-plus"></i></a></li>
-                <li><a href="file:///E:/webchatbackup/WeChat%20Files/sanyanbreadman/Files/frontend/frontend/template/blog/index.html#"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="file:///E:/webchatbackup/WeChat%20Files/sanyanbreadman/Files/frontend/frontend/template/blog/index.html#"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="file:///E:/webchatbackup/WeChat%20Files/sanyanbreadman/Files/frontend/frontend/template/blog/index.html#"><i class="fa fa-rss"></i></a></li>
-            </ul>
+            <a href="http://www.miitbeian.gov.cn/"><span class="copyright">粤ICP备18100973号</span></a>
         </div>
         <!-- end container -->
     </div>
