--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nny/template_label.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nny/template_label.html
@@ -4,7 +4,42 @@
     <meta charset="utf-8" />
     <title></title>
 </head>
-<body>
+<body style="width: 320px;height: 720px; " contenteditable="true">
+    <div>
+        <style type="text/css">
+            img {
+                width: 100%;
+                height: 100%;
+            }
 
+            p {
+                height:12px;
+            }
+        </style>
+        <p style="text-align: left;padding-left:40px;">&nbsp;</p>
+        <p style="text-align: center;font-size:30px;padding-bottom:10px"><strong>合&nbsp; 格&nbsp; 证</strong></p>
+        <p style="text-align: left;padding-left:40px;"><strong>品牌：纳妮儿</strong></p>
+        <p style="text-align: left;padding-left:40px;"><strong>产品名称：家居服</strong></p>
+        <p style="text-align: left;padding-left:40px;"><strong>产品等级：一等品</strong></p>
+        <p style="text-align: left;padding-left:40px;"><strong>检验员：03</strong></p>
+        <p style="text-align: left;padding-left:40px;"><strong>安全类别：GB18401-2010 B类（直</strong></p>
+        <p style="text-align: left;padding-left:40px;"><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;接接触皮肤的产品）</strong></p>
+        <p style="text-align: left;padding-left:40px;"><strong>执行标准：FZ/T73017-2014</strong></p>
+        <div id="qrcode" style="text-align: center;">
+            <img style="width:115px;height:115px" src="../../images/lanting_code.png" />
+        </div>
+       
+        <div style="text-align:center;"><span><strong>{防伪码系统生成}</strong></span></div>
+        
+        <p style="text-align: left;padding-left:40px;"><strong>成份：95%棉  &nbsp; &nbsp; 5%氨纶</strong></p>
+        <p style="text-align: left;padding-left:40px;">&nbsp;</p>
+        <p style="text-align: left;padding-left:40px;">&nbsp;</p>
+        <p style="text-align: left;padding-left:40px;"><strong>品名：针织女套&nbsp; &nbsp; &nbsp;颜色：虾色</strong></p>
+        <p style="text-align: left;padding-left:40px;"><strong>款号：28Z2211&nbsp; &nbsp;尺码：L</strong></p>
+        <div id="barcode" style="text-align:center;width:230px;padding-left:45px">
+            <img src="nny_files/barcode.png" />
+        </div>
+        <div style="text-align:center;"><span><strong>统一零售价：279元</strong></span></div>
+    </div>
 </body>
 </html>
