--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/template_label.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/template_label.html
@@ -13,7 +13,7 @@
             }
 
             p {
-                height:12px;
+                height: 12px;
             }
         </style>
         <p style="text-align: left;padding-left:40px;">&nbsp;</p>
@@ -22,22 +22,22 @@
         <p style="text-align: left;padding-left:40px;"><strong>产品名称：家居服</strong></p>
         <p style="text-align: left;padding-left:40px;"><strong>产品等级：一等品</strong></p>
         <p style="text-align: left;padding-left:40px;"><strong>检验员：03</strong></p>
-        <p style="text-align: left;padding-left:40px;"><strong>安全类别：GB18401-2010 B类（直</strong></p>
-        <p style="text-align: left;padding-left:40px;"><strong>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;接接触皮肤的产品）</strong></p>
+        <p style="text-align: left;padding-left:40px;"><strong>安全类别：</strong><strong style="font-size:15px">GB18401-2010 B类（直</strong></p>
+        <p style="text-align: left;padding-left:40px;"><strong style="font-size:15px">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;接接触皮肤的产品）</strong></p>
         <p style="text-align: left;padding-left:40px;"><strong>执行标准：FZ/T73017-2014</strong></p>
         <div id="qrcode" style="text-align: center;">
-            <img style="width:115px;height:115px" src="../../images/lanting_code.png" />
+            <img style="width:115px;height:115px" src="../../images/nne/28Z2211.png" />
         </div>
-       
-        <div style="text-align:center;"><span><strong>{防伪码系统生成}</strong></span></div>
-        
+
+        <div style="text-align:center;"><span><strong>{系统生成}</strong></span></div>
+
         <p style="text-align: left;padding-left:40px;"><strong>成份：95%棉  &nbsp; &nbsp; 5%氨纶</strong></p>
+
         <p style="text-align: left;padding-left:40px;">&nbsp;</p>
-        <p style="text-align: left;padding-left:40px;">&nbsp;</p>
-        <p style="text-align: left;padding-left:40px;"><strong>品名：针织女套&nbsp; &nbsp; &nbsp;颜色：虾色</strong></p>
+        <p style="text-align: left;padding-left:40px;"><strong>品名：针织女套&nbsp; &nbsp; 颜色：虾色</strong></p>
         <p style="text-align: left;padding-left:40px;"><strong>款号：28Z2211&nbsp; &nbsp;尺码：L</strong></p>
         <div id="barcode" style="text-align:center;width:230px;padding-left:45px">
-            <img src="nny_files/barcode.png" />
+            <img src="nne_files/barcode.png" />
         </div>
         <div style="text-align:center;"><span><strong>统一零售价：279元</strong></span></div>
     </div>
