--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/28Z2211.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/28Z2211.html
@@ -5,14 +5,14 @@
 
     <title>纳妮儿防伪查询平台</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <script src="./nne_files/global.js"></script>
-    <link rel="stylesheet" type="text/css" href="./nne_files/markdown.css">
-    <link rel="stylesheet" type="text/css" href="./nne_files/variables.css">
-    <link rel="stylesheet" type="text/css" href="./nne_files/detail_style.css">
-    <link rel="stylesheet" type="text/css" href="./nne_files/animate.css">
-    <link rel="stylesheet" type="text/css" href="./nne_files/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="./nne_files/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./nne_files/detail_main.css">
+    <script src="../../codepage/nne/nne_files/global.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/markdown.css">
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/variables.css">
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/detail_style.css">
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/animate.css">
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/detail_main.css">
     <style>
         .power {
             color: #999;
@@ -30,9 +30,9 @@
                     text-decoration: underline;
                 }
     </style>
-    <script src="./nne_files/jquery.min.js"></script>
-    <script src="./nne_files/bootstrap.min.js"></script>
-    <script src="./nne_files/TouchSlide.1.1.js"></script>
+    <script src="../../codepage/nne/nne_files/jquery.min.js"></script>
+    <script src="../../codepage/nne/nne_files/bootstrap.min.js"></script>
+    <script src="../../codepage/nne/nne_files/TouchSlide.1.1.js"></script>
 </head>
 <body style="" contenteditable="true">
     <div class="top brandBackgroundColor">
@@ -46,18 +46,18 @@
                 <div class="tempWrap" style="overflow:hidden; position:relative;">
                     <div class="tempWrap" style="overflow:hidden; position:relative;"><ul style="width: 1600px; position: relative; overflow: hidden; padding: 0px; margin: 0px; transition-duration: 200ms; transform: translate(-320px, 0px) translateZ(0px);">
                         <li style="display: table-cell; vertical-align: top; width: 320px;">
-                            <a class="pic"><img src="./nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
                         </li><li style="display: table-cell; vertical-align: top; width: 320px;">
-                            <a class="pic"><img src="./nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
                         </li>
                         <li style="display: table-cell; vertical-align: top; width: 320px;">
-                            <a class="pic"><img src="./nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
                         </li>
                         <li style="display: table-cell; vertical-align: top; width: 320px;">
-                            <a class="pic"><img src="./nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
                         </li>
                     <li style="display: table-cell; vertical-align: top; width: 320px;">
-                            <a class="pic"><img src="./nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
                         </li></ul></div>
                 </div>
             </div>
@@ -100,9 +100,9 @@
     </div>
     <div class="nav brandNavBackgroundColor">
         <ul>
-            <li class="brandNavBtn__moreColor"><a href="http://localhost:62114/codepage/nne/index.html#" class="brandNavBtnColor">更多颜色<i class="fa fa-chevron-circle-up" aria-hidden="true"></i></a></li>
-            <li class="brandNavBtn__parameter"><a href="http://localhost:62114/codepage/nne/index.html#" class="brandNavBtnColor">产品参数<i class="fa fa-chevron-circle-up" aria-hidden="true"></i></a></li>
-            <li class="brandNavBtn__factory"><a href="http://localhost:62114/codepage/nne/index.html#" class="brandNavBtnColor displayMode--desc">品牌信息<i class="fa fa-chevron-circle-up" aria-hidden="true"></i></a></li>
+            <li class="brandNavBtn__moreColor"><a href="#" class="brandNavBtnColor">更多颜色<i class="fa fa-chevron-circle-up" aria-hidden="true"></i></a></li>
+            <li class="brandNavBtn__parameter"><a href="#" class="brandNavBtnColor">产品参数<i class="fa fa-chevron-circle-up" aria-hidden="true"></i></a></li>
+            <li class="brandNavBtn__factory"><a href="#" class="brandNavBtnColor displayMode--desc">品牌信息<i class="fa fa-chevron-circle-up" aria-hidden="true"></i></a></li>
         </ul>
     </div>
     <div class="moreColorBox popupBox">
@@ -113,8 +113,8 @@
             </div>
             <div class="popupBox__Info">
                 <ul>
-                    <li><a href="./nne_files/6366838210985937502669724.jpg" rel="group" title="虾色"><img src="./nne_files/6366838210985937502669724.jpg"></a></li>
-                    <li><a href="./nne_files/6366838211056250005054687.jpg" rel="group" title="卡其"><img src="./nne_files/6366838211056250005054687.jpg"></a></li>
+                    <li><a href="../../codepage/nne/nne_files/6366838210985937502669724.jpg" rel="group" title="虾色"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg"></a></li>
+                    <li><a href="../../codepage/nne/nne_files/6366838211056250005054687.jpg" rel="group" title="卡其"><img src="../../codepage/nne/nne_files/6366838211056250005054687.jpg"></a></li>
                 </ul>
             </div>
         </div>
