--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/container.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/container.html
@@ -5,14 +5,15 @@
 
     <title>纳妮儿防伪查询平台</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <script src="./nne_files/global.js"></script>
-    <link rel="stylesheet" type="text/css" href="./nne_files/markdown.css">
-    <link rel="stylesheet" type="text/css" href="./nne_files/variables.css">
-    <link rel="stylesheet" type="text/css" href="./nne_files/detail_style.css">
-    <link rel="stylesheet" type="text/css" href="./nne_files/animate.css">
-    <link rel="stylesheet" type="text/css" href="./nne_files/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="./nne_files/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="./nne_files/detail_main.css">
+    <script src="../../codepage/nne/nne_files/global.js"></script>
+    
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/markdown.css">
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/variables.css">
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/detail_style.css">
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/animate.css">
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/detail_main.css">
     <style>
         .power {
             color: #999;
@@ -30,9 +31,9 @@
                     text-decoration: underline;
                 }
     </style>
-    <script src="./nne_files/jquery.min.js"></script>
-    <script src="./nne_files/bootstrap.min.js"></script>
-    <script src="./nne_files/TouchSlide.1.1.js"></script>
+    <script src="../../codepage/nne/nne_files/jquery.min.js"></script>
+    <script src="../../codepage/nne/nne_files/bootstrap.min.js"></script>
+    <script src="../../codepage/nne/nne_files/TouchSlide.1.1.js"></script>
 </head>
 <body style="" contenteditable="true">
     {bodyCotent}
