--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/label/28Z2211.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/label/28Z2211.html
@@ -1,7 +1,5 @@
-﻿<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
+﻿<!DOCTYPE html><html><head>
+    <meta charset="utf-8">
     <title></title>
 </head>
 <body style="width: 320px;height: 720px; " contenteditable="true">
@@ -26,20 +24,18 @@
         <p style="text-align: left;padding-left:40px;"><strong style="font-size:15px">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;接接触皮肤的产品）</strong></p>
         <p style="text-align: left;padding-left:40px;"><strong>执行标准：FZ/T73017-2014</strong></p>
         <div id="qrcode" style="text-align: center;">
-            <img style="width:115px;height:115px" src="../../codepage/nne/qr_code_temp.gif">
+            <img style="width:115px;height:115px" src="../../../codepage/nne/label/qr_code_temp.gif">
         </div>
-
         <div style="text-align:center;font-size:10px;" contenteditable="false"><span><strong>{系统生成}</strong></span></div>
-
         <p style="text-align: left;padding-left:40px;"><strong>成份：95%棉  &nbsp; &nbsp; 5%氨纶</strong></p>
-
         <p style="text-align: left;padding-left:40px;">&nbsp;</p>
         <p style="text-align: left;padding-left:40px;"><strong>品名：针织女套&nbsp; &nbsp; 颜色：虾色</strong></p>
         <p style="text-align: left;padding-left:40px;"><strong>款号：28Z2211&nbsp; &nbsp;尺码：L</strong></p>
         <div id="barcode" style="text-align:center;width:230px;padding-left:45px">
-            <img src="../../codepage/nne/nne_files/barcode.png" />
+            <img src="../../../codepage/nne/content/barcode.png">
         </div>
         <div style="text-align:center;"><span><strong>统一零售价：279元</strong></span></div>
     </div>
-</body>
-</html>
+
+
+</body></html>
