--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/mobile/template.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/mobile/template.html
@@ -5,14 +5,14 @@
 
     <title>纳妮儿防伪查询平台</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <script src="../../codepage/nne/nne_files/global.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/markdown.css">
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/variables.css">
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/detail_style.css">
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/animate.css">
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/detail_main.css">
+    <script src="../../../codepage/nne/content/global.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/markdown.css">
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/variables.css">
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/detail_style.css">
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/animate.css">
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/detail_main.css">
     <style>
         .power {
             color: #999;
@@ -30,9 +30,9 @@
                     text-decoration: underline;
                 }
     </style>
-    <script src="../../codepage/nne/nne_files/jquery.min.js"></script>
-    <script src="../../codepage/nne/nne_files/bootstrap.min.js"></script>
-    <script src="../../codepage/nne/nne_files/TouchSlide.1.1.js"></script>
+    <script src="../../../codepage/nne/content/jquery.min.js"></script>
+    <script src="../../../codepage/nne/content/bootstrap.min.js"></script>
+    <script src="../../../codepage/nne/content/TouchSlide.1.1.js"></script>
 </head>
 <body style="" contenteditable="true">
     <div class="top brandBackgroundColor">
@@ -46,13 +46,13 @@
                 <div class="tempWrap" style="overflow:hidden; position:relative;">
                     <ul style="width: 4047px; position: relative; overflow: hidden; padding: 0px; margin: 0px; transition-duration: 0ms; transform: translate(-1349px, 0px) translateZ(0px);">
                         <li style="display: table-cell; vertical-align: top; width: 1349px;">
-                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
                         </li>
                         <li style="display: table-cell; vertical-align: top; width: 1349px;">
-                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
                         </li>
                         <li style="display: table-cell; vertical-align: top; width: 1349px;">
-                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
                         </li>
                     </ul>
                 </div>
@@ -109,8 +109,8 @@
             </div>
             <div class="popupBox__Info">
                 <ul>
-                    <li><a href="../../codepage/nne/nne_files/6366838210985937502669724.jpg" rel="group" title="虾色"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg"></a></li>
-                    <li><a href="../../codepage/nne/nne_files/6366838211056250005054687.jpg" rel="group" title="卡其"><img src="../../codepage/nne/nne_files/6366838211056250005054687.jpg"></a></li>
+                    <li><a href="../../../codepage/nne/content/6366838210985937502669724.jpg" rel="group" title="虾色"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg"></a></li>
+                    <li><a href="../../../codepage/nne/content/6366838211056250005054687.jpg" rel="group" title="卡其"><img src="../../../codepage/nne/content/6366838211056250005054687.jpg"></a></li>
                 </ul>
             </div>
         </div>
