--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/mobile/28Z2211.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/mobile/28Z2211.html
@@ -1,18 +1,15 @@
-﻿<!DOCTYPE html>
-<html style="font-size: 100px;">
-<head>
+﻿<!DOCTYPE html><html><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
     <title>纳妮儿防伪查询平台</title>
     <meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-    <script src="../../codepage/nne/nne_files/global.js"></script>
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/markdown.css">
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/variables.css">
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/detail_style.css">
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/animate.css">
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="../../codepage/nne/nne_files/detail_main.css">
+    <script src="../../../codepage/nne/content/global.js"></script>
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/markdown.css">
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/variables.css">
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/detail_style.css">
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/animate.css">
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../../../codepage/nne/content/detail_main.css">
     <style>
         .power {
             color: #999;
@@ -30,9 +27,9 @@
                     text-decoration: underline;
                 }
     </style>
-    <script src="../../codepage/nne/nne_files/jquery.min.js"></script>
-    <script src="../../codepage/nne/nne_files/bootstrap.min.js"></script>
-    <script src="../../codepage/nne/nne_files/TouchSlide.1.1.js"></script>
+    <script src="../../../codepage/nne/content/jquery.min.js"></script>
+    <script src="../../../codepage/nne/content/bootstrap.min.js"></script>
+    <script src="../../../codepage/nne/content/TouchSlide.1.1.js"></script>
 </head>
 <body style="" contenteditable="true">
     <div class="top brandBackgroundColor">
@@ -44,25 +41,33 @@
         <div id="slideBox" class="slideBox">
             <div class="bd">
                 <div class="tempWrap" style="overflow:hidden; position:relative;">
-                    <div class="tempWrap" style="overflow:hidden; position:relative;"><ul style="width: 1600px; position: relative; overflow: hidden; padding: 0px; margin: 0px; transition-duration: 200ms; transform: translate(-320px, 0px) translateZ(0px);">
-                        <li style="display: table-cell; vertical-align: top; width: 320px;">
-                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                        </li><li style="display: table-cell; vertical-align: top; width: 320px;">
-                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                        </li>
-                        <li style="display: table-cell; vertical-align: top; width: 320px;">
-                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                        </li>
-                        <li style="display: table-cell; vertical-align: top; width: 320px;">
-                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                        </li>
-                    <li style="display: table-cell; vertical-align: top; width: 320px;">
-                            <a class="pic"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                        </li></ul></div>
+                    <div class="tempWrap" style="overflow:hidden; position:relative;">
+                        <div class="tempWrap" style="overflow:hidden; position:relative;"><ul style="width: 2373px; position: relative; overflow: hidden; padding: 0px; margin: 0px; transition-duration: 200ms; transform: translate(-339px, 0px) translateZ(0px);">
+                            <li style="display: table-cell; vertical-align: top; width: 339px;">
+                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            </li><li style="display: table-cell; vertical-align: top; width: 339px;">
+                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            </li>
+                            <li style="display: table-cell; vertical-align: top; width: 339px;">
+                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            </li>
+                            <li style="display: table-cell; vertical-align: top; width: 339px;">
+                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            </li>
+                            <li style="display: table-cell; vertical-align: top; width: 339px;">
+                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            </li>
+                            <li style="display: table-cell; vertical-align: top; width: 339px;">
+                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            </li>
+                        <li style="display: table-cell; vertical-align: top; width: 339px;">
+                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            </li></ul></div>
+                    </div>
                 </div>
             </div>
             <div class="hd">
-                <ul><li class="on">1</li><li class="">2</li><li class="">3</li></ul>
+                <ul><li class="on">1</li><li class="">2</li><li class="">3</li><li class="">4</li><li class="">5</li></ul>
             </div>
         </div>
     </div>
@@ -113,8 +118,8 @@
             </div>
             <div class="popupBox__Info">
                 <ul>
-                    <li><a href="../../codepage/nne/nne_files/6366838210985937502669724.jpg" rel="group" title="虾色"><img src="../../codepage/nne/nne_files/6366838210985937502669724.jpg"></a></li>
-                    <li><a href="../../codepage/nne/nne_files/6366838211056250005054687.jpg" rel="group" title="卡其"><img src="../../codepage/nne/nne_files/6366838211056250005054687.jpg"></a></li>
+                    <li><a href="../../../codepage/nne/content/6366838210985937502669724.jpg" rel="group" title="虾色"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg"></a></li>
+                    <li><a href="../../../codepage/nne/content/6366838211056250005054687.jpg" rel="group" title="卡其"><img src="../../../codepage/nne/content/6366838211056250005054687.jpg"></a></li>
                 </ul>
             </div>
         </div>
@@ -166,9 +171,7 @@
     <div class="collectionsColorBoxBg"></div>
 
 
-
-
-<script type="text/javascript">
+    <script type="text/javascript">
     TouchSlide({
         slideCell: "#slideBox",
         titCell: "#slideBox .hd ul", //开启自动分页 autoPage:true ，此时设置 titCell 为导航元素包裹层
@@ -177,8 +180,8 @@
         autoPage: true //自动分页
     });
 
-</script>
-<script type="text/javascript">
+    </script>
+    <script type="text/javascript">
 
     var bodyScrollTop;
 
@@ -282,158 +285,8 @@
             return false;
         });
 
-        $("#btnCheck").on("click", function (e) {
-            var code = $("#txtSecurityCode").val();
-            var url = '/Store/VerifySecurityCode/a91c00b7-8806-b700-1ca9-06884c34ade5';
-            url = url + "?code=" + code;
-            $.ajax({
-                type: 'post',
-                url: url,
-                contentType: "application/json; charset=utf-8",
-                dataType: 'json',
-            }).done(function (response, status, xhr) {
-                if (response.Error === 0) {
-                    alert(response.Data);
-                } else {
-                    alert(response.Errors.message);
-                }
-                $("#txtSecurityCode").val("");
-            });
-        });
 
-        $("#btnSecurityCode").on("click", function (e) {
-            var url = '/Store/StatVerify/a91c00b7-8806-b700-1ca9-06884c34ade5';
-            $.ajax({
-                type: 'post',
-                url: url,
-                contentType: "application/json; charset=utf-8",
-                dataType: 'json',
-            }).done(function (response, status, xhr) {
-                $("#btnSecurityCode").hide();
-                if (response.Error === 0) {
-                    $("#txtCode").text(response.Data);
-                } else {
-                    $("#txtCode").text(response.Errors.message);
-                }
-                $("#txtCode").show();
-            });
-        });
     });
-</script></body>
-</html>
-<script type="text/javascript">
-    TouchSlide({
-        slideCell: "#slideBox",
-        titCell: "#slideBox .hd ul", //开启自动分页 autoPage:true ，此时设置 titCell 为导航元素包裹层
-        mainCell: "#slideBox .bd ul",
-        effect: "leftLoop",
-        autoPage: true //自动分页
-    });
+    </script>
 
-</script>
-<script type="text/javascript">
-
-    var bodyScrollTop;
-
-    function popupBoxHide(event) {
-        var $popupBox = $(event || ".popupBox");
-        var $popupBoxBg = $('.popupBoxBg');
-        $popupBox.each(function () {
-            $(this).removeClass('popupBox--active');
-        });
-
-        $popupBoxBg.removeClass('popupBoxBg--active');
-
-        $('body').css({ 'overflow-y': 'auto' });
-        if (bodyScrollTop) {
-            $('body').scrollTop(bodyScrollTop);
-        }
-
-    };
-
-    function popupBoxShow(event) {
-        popupBoxHide();
-        var $popupBox = $(event) || $(".popupBox");
-        var $popupBoxBg = $('.popupBoxBg');
-        $popupBox.addClass('popupBox--active');
-        $popupBoxBg.addClass('popupBoxBg--active');
-        bodyScrollTop = $('body').scrollTop();
-        $('body').css({ 'overflow-y': 'hidden' });
-
-    };
-
-    function collectionsColorInit(object) {
-        var $that = $(object);
-
-        //识别添加轮播项
-        var $index = $(".moreColorBox li").index($that.parent());
-        var $collectionObject = $('.moreColorBox .popupBox__Info a');
-        var $appentObject = $('#colorBox .bd ul');
-
-        var $appentText = '';
-        var $imgSrc = '';
-        $collectionObject.each(function () {
-            $imgSrc = $(this).attr('href');
-            $appentText = $appentText + '<li><a class="pic" href=""><img src="' + $imgSrc + '" width="100%" height="auto" /></a></li>';
-        });
-        $appentObject.html($appentText);
-
-        //图片轮播
-        TouchSlide({
-            slideCell: "#colorBox",
-            titCell: "#colorBox .hd ul", //开启自动分页 autoPage:true ，此时设置 titCell 为导航元素包裹层
-            mainCell: "#colorBox .bd ul",
-            effect: "leftLoop",
-            autoPlay: false,
-            defaultIndex: $index, //开始项
-            autoPage: true //自动分页
-        });
-
-    };
-
-    function collectionsColorBoxHide(event) {
-        var $collectionsColorBox = $(event || ".collectionsColorBox");
-        var $collectionsColorBoxBg = $('.collectionsColorBoxBg');
-        $collectionsColorBox.each(function () {
-            $(this).removeClass('collectionsColorBox--active');
-        });
-
-        $collectionsColorBoxBg.removeClass('collectionsColorBoxBg--active');
-
-
-    };
-    function collectionsColorBoxShow(event, object) {
-        collectionsColorInit(object);
-        collectionsColorBoxHide();
-        var $collectionsColorBox = $(event) || $(".collectionsColorBox");
-        var $collectionsColorBoxBg = $('.collectionsColorBoxBg');
-        $collectionsColorBox.addClass('collectionsColorBox--active');
-        $collectionsColorBoxBg.addClass('collectionsColorBoxBg--active');
-
-    };
-
-    $(document).ready(function () {
-        $(".popupBoxBg").on('click', function (e) {
-            popupBoxHide(".popupBox");
-        });
-        $(".popupBox__close").on('click', function (e) {
-            popupBoxHide(".popupBox");
-        });
-        $(".nav a").each(function (index) {
-            $(this).click(function (e) {
-                // 如果使用链接，就不做任何处理
-                if ($(this).hasClass('displayMode--link')) return;
-
-                popupBoxShow($(".popupBox").eq($(".nav li").index($(this).parent())));
-            });
-        });
-        $(".collectionsColorBoxBg").on('click', function (e) {
-            collectionsColorBoxHide(".collectionsColorBox");
-        });
-        $(".moreColorBox .popupBox__Info").on('click', 'a', function (e) {
-            collectionsColorBoxShow(".collectionsColorBox", $(this));
-            return false;
-        });
-      
-    });
-</script>
+</body></html>
