--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/label/template.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/label/template.html
@@ -37,7 +37,7 @@
         <p style="text-align: left;padding-left:40px;"><strong>品名：针织女套&nbsp; &nbsp; 颜色：虾色</strong></p>
         <p style="text-align: left;padding-left:40px;"><strong>款号：28Z2211&nbsp; &nbsp;尺码：L</strong></p>
         <div id="barcode" style="text-align:center;width:230px;padding-left:45px">
-            <img src="../../../codepage/nne/content/barcode.png" />
+            <img src="../../../codepage/nne/content/barcode.jpg" />
         </div>
         <div style="text-align:center;"><span><strong>统一零售价：279元</strong></span></div>
     </div>
