--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/mobile/28Z2211.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/mobile/28Z2211.html
@@ -42,32 +42,36 @@
             <div class="bd">
                 <div class="tempWrap" style="overflow:hidden; position:relative;">
                     <div class="tempWrap" style="overflow:hidden; position:relative;">
-                        <div class="tempWrap" style="overflow:hidden; position:relative;"><ul style="width: 2373px; position: relative; overflow: hidden; padding: 0px; margin: 0px; transition-duration: 200ms; transform: translate(-339px, 0px) translateZ(0px);">
-                            <li style="display: table-cell; vertical-align: top; width: 339px;">
+                        <div class="tempWrap" style="overflow:hidden; position:relative;"><div class="tempWrap" style="overflow:hidden; position:relative;"><ul style="width: 2880px; position: relative; overflow: hidden; padding: 0px; margin: 0px; transition-duration: 200ms; transform: translate(-320px, 0px) translateZ(0px);">
+                            <li style="display: table-cell; vertical-align: top; width: 320px;">
                                 <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li><li style="display: table-cell; vertical-align: top; width: 339px;">
+                            </li><li style="display: table-cell; vertical-align: top; width: 320px;">
                                 <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li>
-                            <li style="display: table-cell; vertical-align: top; width: 339px;">
-                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li>
-                            <li style="display: table-cell; vertical-align: top; width: 339px;">
+                            </li><li style="display: table-cell; vertical-align: top; width: 320px;">
                                 <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
                             </li>
-                            <li style="display: table-cell; vertical-align: top; width: 339px;">
+                            <li style="display: table-cell; vertical-align: top; width: 320px;">
                                 <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
                             </li>
-                            <li style="display: table-cell; vertical-align: top; width: 339px;">
+                            <li style="display: table-cell; vertical-align: top; width: 320px;">
                                 <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
                             </li>
-                        <li style="display: table-cell; vertical-align: top; width: 339px;">
+                            <li style="display: table-cell; vertical-align: top; width: 320px;">
                                 <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
-                            </li></ul></div>
+                            </li>
+                            <li style="display: table-cell; vertical-align: top; width: 320px;">
+                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            </li>
+                        <li style="display: table-cell; vertical-align: top; width: 320px;">
+                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            </li><li style="display: table-cell; vertical-align: top; width: 320px;">
+                                <a class="pic"><img src="../../../codepage/nne/content/6366838210985937502669724.jpg" width="100%" height="auto"></a>
+                            </li></ul></div></div>
                     </div>
                 </div>
             </div>
             <div class="hd">
-                <ul><li class="on">1</li><li class="">2</li><li class="">3</li><li class="">4</li><li class="">5</li></ul>
+                <ul><li class="on">1</li><li class="">2</li><li class="">3</li><li class="">4</li><li class="">5</li><li class="">6</li><li class="">7</li></ul>
             </div>
         </div>
     </div>
