--- a/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/label/28Z2211.html
+++ b/src/Lanting.IDCode.Web.Mvc/wwwroot/codepage/nne/label/28Z2211.html
@@ -1,9 +1,20 @@
-﻿<!DOCTYPE html><html><head>
-    <meta charset="utf-8">
-    <title></title>
+﻿<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title>Screen shoter</title>
+    <style>
+        .container {
+            margin-top: 10px;
+            border: solid 1px black;
+        }
+    </style>
+    <script src="../../../codepage/nne/content/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/0.4.1/html2canvas.min.js"></script>
+
 </head>
 <body style="width: 320px;height: 720px; " contenteditable="true">
-    <div>
+    <div id="content">
         <style type="text/css">
             img {
                 width: 100%;
@@ -36,6 +47,49 @@
         </div>
         <div style="text-align:center;"><span><strong>统一零售价：279元</strong></span></div>
     </div>
+    <script>
+        var action = GetQueryString('action');
+        if (action == 'print') {
+            var code = GetQueryString('code');
+            let region = document.querySelector("#content"); // whole screen
+            var img = document.createElement("img");
+            html2canvas(region, {
+                onrendered: function (canvas) {
+                    let pngUrl = canvas.toDataURL();
+                    var extra_canvas = document.createElement("canvas");
+                    extra_canvas.setAttribute('width', 320);
+                    extra_canvas.setAttribute('height', 600);
+                    var ctx = extra_canvas.getContext('2d');
+                    ctx.drawImage(canvas, 0, 0, canvas.width, canvas.height, 0, 0, 320, 600);
+                    var dataURL = extra_canvas.toDataURL();
 
+                    img.src = dataURL;
+                    // here you can allow user to set bug-region
+                    // and send it with 'pngUrl' to server
+                    var image = pngUrl.replace('data:image/png;base64,', '');
 
-</body></html>
+                    $.ajax({
+                        type: "POST",
+                        url: '/Product/SaveSnapshot',
+                        data: JSON.stringify({ DataUrl: image, FileName: code }),
+                        contentType: "application/json; charset=utf-8", // this
+                        dataType: "json", // and this
+                        success: function (result) {
+                            if (result.next != '')
+                                window.location.url = "/home/label?code=" + result.next;
+                        },
+                        error: function (errormessage) {
+                            //do something else
+                        }
+                    });
+                },
+            });
+        }
+        function GetQueryString(name) {
+            var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");
+            var r = window.location.search.substr(1).match(reg);
+            if (r != null) return unescape(r[2]); return null;
+        }
+    </script>
+</body>
+</html>
